Renamed directory from wiki to restAPI
